--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "start": "node server",
     "clean": "rm -r ./dist",
     "build": "rimraf dist && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --profile --colors",
-    "eslint": "eslint .",
-    "jscs": "jscs ."
+    "server": "NODE_ENV=production node server",
+    "eslint": "eslint ."
   },
   "dependencies": {
     "babel-cli": "^6.6.5",
@@ -45,6 +45,8 @@
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
     "eslint-plugin-react": "^4.2.3",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "jscs": "^2.11.0",
