--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "author": "Dominic McPhee",
   "license": "MIT",
   "scripts": {
-    "test": "",
-    "start": "node server",
+    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
+    "start": "node server/server.js",
     "clean": "rm -r ./dist",
     "build": "rimraf dist && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --profile --colors",
-    "server": "NODE_ENV=production node server",
+    "server": "NODE_ENV=production node server/server.js",
     "eslint": "eslint ."
   },
   "dependencies": {
     "babel-cli": "^6.6.5",
     "ejs": "^2.4.1",
-    "exports-loader": "*",
+    "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
@@ -37,10 +37,12 @@
     "babel-eslint": "^5.0.0",
     "babel-jscs": "^2.0.5",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-jsx": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
@@ -49,17 +51,23 @@
     "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fetch-mock": "^4.3.0",
     "jscs": "^2.11.0",
     "jsdom": "^8.1.0",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.8",
     "mocha": "^2.4.5",
     "mocha-jsdom": "^1.1.0",
     "postcss-loader": "^0.8.2",
     "react-addons-test-utils": "^0.14.7",
+    "react-tools": "^0.13.3",
     "react-transform-hmr": "^1.0.4",
     "rimraf": "*",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "sinon-stub-promise": "^1.1.0",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
