--- a/package.json
+++ b/package.json
@@ -19,25 +19,26 @@
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
     "start": "node server/server.js",
     "clean": "rm -r ./dist",
-    "build": "rimraf dist && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "build": "rm -rf dist && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --profile --colors",
     "server": "NODE_ENV=production node server/server.js",
     "eslint": "eslint ."
   },
   "dependencies": {
-    "babel-cli": "^6.6.5",
+    "babel-cli": "^6.7.5",
     "ejs": "^2.4.1",
     "exports-loader": "^0.6.3",
+    "express": "^4.13.4",
     "imports-loader": "^0.6.5",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
     "babel-jscs": "^2.0.5",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-react-jsx": "^6.6.5",
+    "babel-plugin-transform-react-jsx": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -49,7 +50,6 @@
     "eslint-plugin-react": "^4.2.3",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
-    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fetch-mock": "^4.3.0",
     "jscs": "^2.11.0",
@@ -61,10 +61,8 @@
     "mocha": "^2.4.5",
     "mocha-jsdom": "^1.1.0",
     "postcss-loader": "^0.8.2",
-    "react-addons-test-utils": "^0.14.7",
-    "react-tools": "^0.13.3",
+    "react-addons-test-utils": "^15.0.1",
     "react-transform-hmr": "^1.0.4",
-    "rimraf": "*",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "sinon-stub-promise": "^1.1.0",
