--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-jscs": "^2.0.5",
+    "babel-eslint": "^7.1.0",
+    "babel-jscs": "^3.0.0-beta1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
@@ -45,32 +45,32 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.4.0",
-    "eslint-plugin-react": "^4.2.3",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.10.0",
+    "eslint-plugin-react": "^6.6.0",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fetch-mock": "^4.3.0",
-    "jscs": "^2.11.0",
-    "jsdom": "^8.1.0",
+    "fetch-mock": "^5.5.0",
+    "jscs": "^3.0.7",
+    "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.8",
-    "mocha": "^2.4.5",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "mocha": "^3.1.2",
     "mocha-jsdom": "^1.1.0",
-    "postcss-loader": "^0.8.2",
+    "postcss-loader": "^1.1.1",
     "react-addons-test-utils": "^15.0.1",
     "react-transform-hmr": "^1.0.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "sinon-stub-promise": "^1.1.0",
-    "stats-webpack-plugin": "^0.3.1",
+    "sinon-stub-promise": "^4.0.0",
+    "stats-webpack-plugin": "^0.4.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0",
-    "whatwg-fetch": "^0.11.0"
+    "whatwg-fetch": "^1.0.0"
   }
 }
