--- a/.eslintrc
+++ b/.eslintrc
@@ -174,6 +174,7 @@
     "react/jsx-sort-props": 0,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
+    "react/jsx-wrap-multilines": 2,
     "react/no-did-mount-set-state": [0, "disallow-in-func"],
     "react/no-did-update-set-state": 2,
     "react/no-multi-comp": 2,
@@ -182,7 +183,6 @@
     "react/react-in-jsx-scope": 2,
     "react/self-closing-comp": 2,
     "react/sort-comp": 2,
-    "react/wrap-multilines": 2
   },
   "plugins": [
     "react"
